force-app/main/default/objects/Booking_Staff_Assignment__c/Booking_Staff_Assignment__c.object-meta.xml
<CustomObject>
    <label>Booking Staff Assignment</label>
    <nameField>
        <displayFormat>BSA - {00000}</displayFormat>
        <label>Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Staff Assignment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>