force-app/main/default/objects/Booking_Staff_Assignment__c/fields/Booking_Order__c.field-meta.xml
<CustomField>
    <fullName>Booking_Order__c</fullName>
    <label>Booking</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Booking Staff Assignment</relationshipLabel>
    <relationshipName>Booking_Staff_Assignment</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>