force-app/main/default/objects/Booking_Staff_Assignment__c/fields/Staff__c.field-meta.xml
<CustomField>
    <fullName>Staff__c</fullName>
    <label>Staff</label>
    <referenceTo>Staff__c</referenceTo>
    <relationshipLabel>Booking Staff Assignment</relationshipLabel>
    <relationshipName>Booking_Staff_Assignment</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>