force-app/main/default/objects/Booking_Staff_Assignment__c/fields/Staff_Finish_Time__c.field-meta.xml
<CustomField>
    <fullName>Staff_Finish_Time__c</fullName>
    <label>Staff Finish Time</label>
    <type>Time</type>
</CustomField>