force-app/main/default/objects/Booking_Staff_Assignment__c/fields/Types_of_Staff__c.field-meta.xml
<CustomField>
    <fullName>Types_of_Staff__c</fullName>
    <label>Types of Staff</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Senior Waiter</fullName>
            </value>
            <value>
                <fullName>Function Waiter</fullName>
            </value>
            <value>
                <fullName>Simple Bar</fullName>
            </value>
            <value>
                <fullName>Mixologist</fullName>
            </value>
            <value>
                <fullName>Barista</fullName>
            </value>
            <value>
                <fullName>Supervisor</fullName>
            </value>
            <value>
                <fullName>Promo Staff</fullName>
            </value>
            <value>
                <fullName>Boardroom waiter</fullName>
            </value>
            <value>
                <fullName>Senior Bartender</fullName>
            </value>
            <value>
                <fullName>Pantry Manager</fullName>
            </value>
            <value>
                <fullName>host</fullName>
            </value>
            <value>
                <fullName>Bar Staff</fullName>
            </value>
            <value>
                <fullName>Barback</fullName>
            </value>
            <value>
                <fullName>mix</fullName>
            </value>
            <value>
                <fullName>Ushers</fullName>
            </value>
            <value>
                <fullName>Senior Supervisor</fullName>
            </value>
            <value>
                <fullName>kitchenhand</fullName>
            </value>
            <value>
                <fullName>Concierge</fullName>
            </value>
            <value>
                <fullName>Junior Waiter</fullName>
            </value>
            <value>
                <fullName>Security Guard</fullName>
            </value>
            <value>
                <fullName>junior Bartender</fullName>
            </value>
            <value>
                <fullName>Event Waiter</fullName>
            </value>
            <value>
                <fullName>sommelier</fullName>
            </value>
            <value>
                <fullName>miso</fullName>
            </value>
            <value>
                <fullName>Food Safety Supervisor</fullName>
            </value>
            <value>
                <fullName>Dishwasher</fullName>
            </value>
            <value>
                <fullName>maître d&apos;</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>